changes in story-snapshot UI, added buttons

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 </nav>
 <section id="skeleton">
   <div class="container-fluid no-left-padding">
-    <div id="sidebar" class="col-lg-3 col-md-3 col-xs-12 no-left-padding">
+    <div id="sidebar" class="col-lg-2 col-md-2 col-xs-12 no-left-padding">
       <div class="well">
         <aside>
           <article>
@@ -91,7 +91,7 @@
         </aside>
       </div>
     </div>
-    <div class="col-lg-offset-3 col-lg-9 col-xs-12">
+    <div class="col-lg-offset-2 col-lg-10 col-xs-12 no-right-padding">
       <br class="clearfix"/>
 
       <section ui-view>
