added login screen; still needs integration

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,11 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-right navbar-form" action="">
-        <button class="btn btn-primary">
+      <div class="navbar-right navbar-form">
+        <a class="btn btn-primary" href="login.html">
           Login
-        </button>
-      </form>
+        </a>
+      </div>
     </div>
     <!-- /.navbar-collapse -->
   </div>
@@ -158,6 +158,8 @@
 <script src="scripts/controllers/pages.js"></script>
 
 <script src="scripts/services/trending.js"></script>
+
+<script src="scripts/directives/story.js"></script>
 <!-- endbuild -->
 </body>
 </html>
