added additional login options

--- a/app/login.html
+++ b/app/login.html
@@ -40,7 +40,24 @@
                class="btn btn-block btn-primary btn-login-submit"/>
       </div>
     </form>
-
+    <hr/>
+    <div class="row">
+      <div class="col-lg-4">
+        <a class="btn btn-primary btn-block" href="">
+          <i class="fa fa-facebook"></i>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a class="btn btn-primary btn-block" href="">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </div>
+      <div class="col-lg-4">
+        <a class="btn btn-primary btn-block" href="">
+          <i class="fa fa-google"></i>
+        </a>
+      </div>
+    </div>
   </div>
 
 </div>
