--- a/app/login.html
+++ b/app/login.html
@@ -17,22 +17,26 @@
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
 </head>
-<body>
+<body ng-controller="Login as vm">
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
   your browser</a> to improve your experience.</p>
 <![endif]-->
 <div class="login-wrapper">
   <div class="well login-box">
-    <form>
+
+    <form ng-submit="vm.login(username, password)">
       <legend>Eventapture</legend>
+      <div ng-show="vm.error.has" class="alert alert-danger">
+        <p>{{ vm.error.message }}</p>
+      </div>
       <div class="form-group">
         <input id="username" autofocus
-               placeholder="Username" type="text" name="username"
+               placeholder="Username" type="text" name="username" ng-model="username"
                class="form-control"/>
       </div>
       <div class="form-group">
-        <input id="password" placeholder="Password" type="password" name="password"
+        <input id="password" placeholder="Password" type="password" name="password" ng-model="password"
                class="form-control"/>
       </div>
       <div class="form-group text-center">
@@ -78,12 +82,10 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/constants.js"></script>
 
-<script src="scripts/controllers/index.js"></script>
-<script src="scripts/controllers/pages.js"></script>
+<script src="scripts/controllers/login.js"></script>
 
-<script src="scripts/services/trending.js"></script>
+<script src="scripts/services/authentication.js"></script>
 
-<script src="scripts/directives/story.js"></script>
 <!-- endbuild -->
 </body>
 </html>
