--- a/app/index.html
+++ b/app/index.html
@@ -173,6 +173,7 @@
 <script src="scripts/controllers/index.js"></script>
 <script src="scripts/controllers/pages.js"></script>
 <script src="scripts/controllers/root.js"></script>
+<script src="scripts/controllers/login.js"></script>
 
 <script src="scripts/services/trending.js"></script>
 <script src="scripts/services/authentication.js"></script>
