--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
 <script src="scripts/services/authentication.js"></script>
 
 <script src="scripts/directives/story.js"></script>
+<script src="scripts/directives/ticker.js"></script>
 <!-- endbuild -->
 </body>
 </html>
