--- a/app/index.html
+++ b/app/index.html
@@ -62,9 +62,11 @@
 <script src="scripts/controllers/pages.js"></script>
 <script src="scripts/controllers/root.js"></script>
 <script src="scripts/controllers/login.js"></script>
+<script src="scripts/controllers/story.js"></script>
 
 <script src="scripts/services/trending.js"></script>
 <script src="scripts/services/authentication.js"></script>
+<script src="scripts/services/utility.js"></script>
 
 <script src="scripts/directives/story.js"></script>
 <script src="scripts/directives/ticker.js"></script>
