--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
   <link rel="stylesheet" href="bower_components/nvd3/src/nv.d3.css" />
+  <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
   <!-- endbower -->
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
@@ -50,6 +51,7 @@
 <script src="bower_components/nvd3/nv.d3.js"></script>
 <script src="bower_components/angular-nvd3/dist/angular-nvd3.min.js"></script>
 <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -63,6 +65,7 @@
 <script src="scripts/controllers/root.js"></script>
 <script src="scripts/controllers/login.js"></script>
 <script src="scripts/controllers/story.js"></script>
+<script src="scripts/controllers/settings.js"></script>
 
 <script src="scripts/services/trending.js"></script>
 <script src="scripts/services/authentication.js"></script>
