--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
 <script src="scripts/services/trending.js"></script>
 <script src="scripts/services/authentication.js"></script>
 <script src="scripts/services/utility.js"></script>
+<script src="scripts/services/search.js"></script>
 
 <script src="scripts/directives/story.js"></script>
 <script src="scripts/directives/ticker.js"></script>
